--- a/WpfEnumMenuItem/WpfEnumMenuItem.csproj
+++ b/WpfEnumMenuItem/WpfEnumMenuItem.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>WpfEnumMenuItem</PackageId>
+    <PackageTags>WPF Enum MenuItem</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
 </Project>
