--- a/.github/workflows/wpf.yml
+++ b/.github/workflows/wpf.yml
@@ -22,15 +22,8 @@ jobs:
       
     - uses: actions/upload-artifact@v2
       with:
-          name: nupkg
-          path: bin/Release/*.nupkg
+          path: WpfEnumMenuItem/bin/Release
       
     - uses: actions/upload-artifact@v2
       with:
-          name: Example net45
-          path: ExampleApp/bin/Release/net45
-      
-    - uses: actions/upload-artifact@v2
-      with:
-          name: Example net5.0
-          path: ExampleApp/bin/Release/net5.0-windows
+          path: ExampleApp/bin/Release
