--- a/.github/workflows/wpf.yml
+++ b/.github/workflows/wpf.yml
@@ -1,4 +1,4 @@
-name: WPF .NET
+name: Build .NET WPF
 
 on:
   push:
@@ -14,8 +14,6 @@ jobs:
     - uses: actions/checkout@v2
     
     - uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.x
 
     - name: Build
       run: dotnet build -c Release
