--- a/.github/workflows/wpf.yml
+++ b/.github/workflows/wpf.yml
@@ -16,7 +16,9 @@ jobs:
     - uses: actions/setup-dotnet@v1
 
     - name: Build
-      run: dotnet build -c Release
+      run: |
+        dotnet --info
+        dotnet build -c Release
       
     - uses: actions/upload-artifact@v2
       with:
