--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,13 +2,13 @@
   <PropertyGroup>
     <TargetFrameworks>net462;net5.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
-    <LangVersion>9</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   
   <PropertyGroup>
     <Description>A drop-in replacement for MenuItem that binds to an enum</Description>
     <Authors>Daniel Chalmers</Authors>
-    <Copyright>© Daniel Chalmers 2021</Copyright>
+    <Copyright>© Daniel Chalmers 2022</Copyright>
     <Version>0.2.0</Version>
     <RepositoryUrl>https://github.com/danielchalmers/WpfEnumMenuItem</RepositoryUrl>
   </PropertyGroup>
