--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,6 @@ name: Deploy
 
 on:
   push:
-    branches:
-      - master
     tags:
       - 'v*'
 
@@ -18,16 +16,10 @@ jobs:
       - name: Create package
         run: dotnet pack "WpfEnumMenuItem/WpfEnumMenuItem.csproj" -c:Release -o "publish"
 
-      - uses: actions/upload-artifact@v3
-        with:
-          path: "publish/*"
-
       - name: Upload to NuGet
-        if: startsWith(github.ref, 'refs/tags/v')
-        run: dotnet nuget push --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source 'https://api.nuget.org/v3/index.json' "publish/*.nupkg"
+        run: dotnet nuget push --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source 'https://api.nuget.org/v3/index.json' "publish\*.nupkg"
 
       - name: Create GitHub release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v1	
         with:
           files: "publish/*"
