--- a/WpfEnumMenuItem/WpfEnumMenuItem.csproj
+++ b/WpfEnumMenuItem/WpfEnumMenuItem.csproj
@@ -4,6 +4,11 @@
     <PackageId>WpfEnumMenuItem</PackageId>
     <PackageTags>WPF Enum MenuItem</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
 
 </Project>
